[metadata]
name = github-social
version = 0.1.0
author = Sinku
author_email = sininoir@gmail.com
description = A helper for github users managing their accounts as social accounts.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/PapaSinku/github-social
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
[options]
packages = find:
python_requires = >=3.7
include_package_data = True