[metadata]
name = github-social
version = 0.1.1
author = Sinku
author_email = sininoir@gmail.com
description = A helper for github users managing their accounts as social accounts.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/PapaSinku/github-social
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
[options]
packages = find:
python_requires = >=3.7
install_requires =
    beautifulsoup4==4.11.1
    mypy-extensions==0.4.3
    pathspec==0.9.0
    platformdirs==2.5.2
    soupsieve==2.3.2.post1
    tomli==2.0.1
    typing_extensions==4.3.0
include_package_data = True
